<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coinCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/Currency" />

    <TextView
        android:id="@+id/coinValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Value"
        android:layout_below="@+id/coinCurrency"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/coinExchange"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/coinValue"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Exchange"
        android:background="@drawable/rounded_button_coinview"/>
</RelativeLayout>